# onesociety

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml
.cursor/rules/: api_contracts.json  ci_cd.json  flutter_frontend.json  onesociety.mdc  postgresql.json  project_structure.json  rust_backend.json  testing.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  dependabot.yml  flutter.yml  security.yml
apps/api-gateway/: Cargo.toml
apps/auth-service/: Cargo.toml
apps/messaging-service/: Cargo.toml
apps/monolith-server/: Cargo.toml
apps/monolith-server/libs/proto/: Cargo.toml
apps/monolith-server/src/: auth.rs  config.rs  jwt.rs  lib.rs  main.rs  messaging.rs  observability.rs  openapi.rs  payment.rs  product.rs  rental.rs  review.rs  state.rs  subscription.rs
apps/monolith-server/src/routes/: admin.rs  auth.rs  health.rs  messaging.rs  mod.rs  notification.rs  payment.rs  product.rs  rental.rs  review.rs  subscription.rs  user.rs
apps/monolith-server/tests/: admin_tests.rs  all_routes_tests.rs  auth_tests.rs  health_tests.rs  jwt_tests.rs  messaging_tests.rs  notification_tests.rs  observability_tests.rs  payment_tests.rs  product_tests.rs  rental_tests.rs  review_tests.rs  router_tests.rs  subscription_tests.rs
apps/notification-service/: Cargo.toml
apps/payment-service/: Cargo.toml
apps/payment-service/src/: lib.rs
apps/product-service/: Cargo.toml
apps/rental-service/: Cargo.toml
apps/search-service/: Cargo.toml
apps/user-service/: Cargo.toml
db/: README.md  requirement.md
db/migrations/messaging/: 20240405000001_create_messaging_tables.down.sql  20240405000001_create_messaging_tables.up.sql
db/migrations/notification/: 20240825000001_create_notifications_tables.down.sql  20240825000001_create_notifications_tables.up.sql
db/migrations/payment/: 20240405000001_create_payment_tables.down.sql  20240405000001_create_payment_tables.up.sql
db/schemas/: onesociety.sql
db/scripts/: manage_db.sh
db/seed/: initial_data.sql
db/sql/: validate_schema.sql
deploy/docker/: Dockerfile.service
docs/: requirement.md
libs/models/: Cargo.toml
project/plan/: 01_current_state.md  02_architecture.md  03_backend_plan.md  04_database_plan.md  05_frontend_plan.md  06_ci_cd_and_quality.md  07_security_and_compliance.md  08_release_plan.md  09_open_questions.md  README.md
project/tasks/: 2025-08-25_features_2_to_5.md
(+8 files in other folders)
