[package]
name = "monolith-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["headers"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8.3"
argon2 = "0.5"
bcrypt = "0.15"
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono", "yaml"] }
utoipa-swagger-ui = { version = "5", features = ["axum"] }
prometheus = "0.13"
tower-http = { version = "0.4", features = ["trace"] }
once_cell = "1.19"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tower = "0.4"
